[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Artem Malyshev <proofit404@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "Stories library integration with Django framework."
documentation = "https://proofit404.github.io/stories-django"
homepage = "https://pypi.org/project/stories-django"
license = "BSD-2-Clause"
name = "stories-django"
packages = [
    { include = "_stories_django", from = "src" },
    { include = "stories_django", from = "src" },
]
readme = "docs/index.md"
repository = "https://github.com/proofit404/stories-django"
version = "0.2.0dev0"

[tool.poetry.dependencies]
python = "~3.6 || ~3.7 || ~3.8 || ~3.9"

[tool.poetry.urls]
Changelog = "https://proofit404.github.io/stories-django/changelog"
Issues = "https://github.com/proofit404/stories-django/issues"
